# ProjectorDisplay

./: .gitignore  .gitmodules  EXAMPLES.md  README.md  link-worktree.sh  pyproject.toml
_bmad-output/: ADR-12-position-aware-size-conversion.md  COMMIT_PATTERNS.md  project-context.md
_bmad-output/implementation-artifacts/: quick-dev-session-status.md  tech-spec-projector-display.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: calibration_example.yaml  server_config.yaml
docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
examples/: basic_usage.py  test_all_shapes.py  test_alpha_blending.py  test_debug_layers.py  test_drawings.py  test_field_backgrounds.py  test_line_batch.py  test_stress.py  test_text_rendering.py  test_trajectories.py
projector_display/: __init__.py  client.py  server.py  storage.py
projector_display/commands/: __init__.py  base.py
projector_display/commands/core/: __init__.py
projector_display/commands/prebuilt/: __init__.py  asset_commands.py  debug_commands.py  drawing_commands.py  (+4 more)
projector_display/core/: __init__.py  draw_primitive.py  field_calibrator.py  rigidbody.py  scene.py
projector_display/mocap/: __init__.py  tracker.py
projector_display/rendering/: __init__.py  background.py  debug_layers.py  gles_renderer.py  primitives.py  renderer.py  trajectory.py
projector_display/utils/: __init__.py  color.py  logging.py  profiler.py
(+5 files in other folders)
